--- a/software/FadingLed/FadingLED.ioc
+++ b/software/FadingLed/FadingLED.ioc
@@ -31,7 +31,9 @@ Mcu.Pin17=PB6
 Mcu.Pin18=PB7
 Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PA0
-Mcu.Pin20=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin22=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA5
@@ -39,7 +41,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB0
 Mcu.Pin9=PA9
-Mcu.PinsNb=21
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L071KZTx
@@ -182,7 +184,8 @@ TIM2.Period=3200
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Period
+TIM3.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Period,ClockDivision
 TIM3.Period=32000
 TIM7.IPParameters=Period,Prescaler
 TIM7.Period=10000
@@ -193,6 +196,10 @@ USART5.IPParameters=VirtualMode-Asynchronous
 USART5.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=custom
